Fixes #21 - wrap headings for the mobile

--- a/app/assets/stylesheets/mobile-custom.css.scss
+++ b/app/assets/stylesheets/mobile-custom.css.scss
@@ -10,3 +10,7 @@
 .mobile_banner_advertisment{
     padding-top: 4px;
 }
+
+.wrap-heading-override{
+    white-space: normal;
+}
